2005-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion-manager.in:
	  install correct manager here too
	* flumotion/configure/configure.py:
	  increase timeouts a little

2005-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion-worker.in:
	  use twisted.compat to install the reactor
	* flumotion/twisted/compat.py:
	  use the glib2reactor in twisted 2.0
	* flumotion/worker/worker.py:
	  don't ignore SIGINT, the reactor handles it nicely.
	  another step on the way to twisted 2.0 compat

2005-07-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/python.mk:
	  disable our custom python install program for testing on FC4
	* flumotion/wizard/Makefile.am:
	* flumotion/wizard/types.py:
	* flumotion/wizard/wizard.py:
	  rename types to classes so it doesn't conflict with the standard
	  types module and break make install

2005-07-15  Michael Smith <msmith@fluendo.com>

	* data/glade/admin.glade:
	Change the 'gtk-about' menu item into a slightly more user-friendly 
	'About'
	* doc/man/flumotion-admin.1:
	* doc/man/flumotion-manager.1:
	* doc/man/flumotion-worker.1:
	* flumotion/manager/main.py:
	Manpage updates, explain multiple config files in flumotion-manager,
	and fix the flumotion-manager usage message.

2005-07-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/videotest.py:
	* flumotion/manager/base.py:
	* flumotion/manager/manager.py:
	* flumotion/test/common.py:
	* flumotion/test/test_common_componentui.py:
	* flumotion/test/test_flavors.py:
	* flumotion/test/test_http.py:
	* flumotion/test/test_keycards.py:
	* flumotion/test/test_pb.py:
	* flumotion/test/test_twisted_compat.py:
	* flumotion/test/test_worker_worker.py:
	* flumotion/worker/worker.py:
	  fix test suite so that it completes with Twisted 2.0
	  still need to look at some deprecation warnings though.

2005-07-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/common.py: